--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <meta property="og:image" content=" img\Bitmap.png"/>
   <meta property="og:site_name" content=" 六角西餐廳"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="D:\Front-end\RWD\css/css.css">
+  <link rel="stylesheet" href="C:\Users\user\Documents\GitHub\RWD-Hamberger\css/css.css">
  
  
   <script src="https://kit.fontawesome.com/d038f356df.js"></script>
    <script src="D:\Front-end\RWD\js/jquery-3.1.1.min.js"></script>
-  <script src="D:\Front-end\RWD\js\all.js"></script>
+  <script src="C:\Users\user\Documents\GitHub\RWD-Hamberger\js\all.js"></script>
 </head>
 
 <body>
