--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  
   <script src="https://kit.fontawesome.com/d038f356df.js"></script>
    <script src="D:\Front-end\RWD\js/jquery-3.1.1.min.js"></script>
-  <script src="C:\Users\user\Documents\GitHub\RWD-Hamberger\js\all.js"></script>
+  <script src="https://github.com/corly74/RWD-Hamberger/blob/master/js/jquery-3.1.1.min.js"></script>
 </head>
 
 <body>
