--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <h3 class="hh3">這麼好吃的秘訣是什麼</h3>
 
       <li >
-      <img src="D:\Front-end\RWD\img\feature_1.png" class="im1">
+      <img src="https://github.com/corly74/RWD-Hamberger/blob/master/img/feature_1.png" class="im1">
       <h4 >台灣本土蔬菜</h4>
       <p >In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elit facilisis tristique. Nam vel iaculis mauris.</p>
       </li>
