--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
       </li>
 
       <li >
-      <img src="D:\Front-end\RWD\img\feature_2.png" class="im2">
+      <img src="https://github.com/corly74/RWD-Hamberger/blob/master/img/feature_2.png?raw=true" class="im2">
       <h4 >專業米其林廚師</h4>
       <p >Sed ullamcorper tellus erat, non ultrices sem tincidunt euismod. Fusce rhoncus porttitor velit, eu bibendum nibh aliquet vel. Fusce lorem leo, vehicula at nibh quis, facilisis accumsan turpis.</p>
       </li>
 
       <li>
-      <img src="D:\Front-end\RWD\img\feature_3.png" class="im3">
+      <img src="https://github.com/corly74/RWD-Hamberger/blob/master/img/feature_3.png?raw=true" class="im3">
       <h4 >對於專業不能退讓</h4>
        <p >Fusce rhoncus porttitor velit, eu bibendum nibh aliquet vel. Fusce lorem leo, vehicula at nibh quis, facilisis accumsan turpis.</p>
       
@@ -116,7 +116,7 @@
         <h2>聽聽別人的感想</h2>
 
         <div class="area1">
-          <img src="D:\Front-end\RWD\img\avatar_1.png">
+          <img src="https://github.com/corly74/RWD-Hamberger/blob/master/img/avatar_1.png?raw=true">
           <div class="story1">
           <p class="name1">高雄一口吃</p>
           <p class="comment1">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
@@ -126,7 +126,7 @@
         </div>
 
          <div class="area2">
-          <img src="D:\Front-end\RWD\img\avatar_2.png">
+          <img src="https://github.com/corly74/RWD-Hamberger/blob/master/img/avatar_2.png?raw=true">
           <div class="story2">
           <p class="name2">廟口小霸王</p>
           <p class="comment2">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
@@ -136,7 +136,7 @@
         </div>
 
          <div class="area3">
-          <img src="D:\Front-end\RWD\img\avatar_3.png">
+          <img src="https://github.com/corly74/RWD-Hamberger/blob/master/img/avatar_3.png?raw=true">
           <div class="story3">
           <p class="name3">春天也來了</p>
           <p class="comment3">自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
@@ -224,9 +224,9 @@
       </div>
 
       <div class="social">
-        <img src="file:///D:/Front-end/RWD/img/google.png" style="height: 31px;height: 31px;">
-        <img src="file:///D:/Front-end/RWD/img/twitter_PNG32.png" style="height: 31px;height: 31px;">
-        <img src="file:///D:/Front-end/RWD/img/Facebook_UI-03-512.png" style="height: 31px;height: 31px;">
+        <img src="https://github.com/corly74/RWD-Hamberger/blob/master/img/google.png?raw=true" style="height: 31px;height: 31px;">
+        <img src="https://github.com/corly74/RWD-Hamberger/blob/master/img/twitter_PNG32.png?raw=true" style="height: 31px;height: 31px;">
+        <img src="https://github.com/corly74/RWD-Hamberger/blob/master/img/Facebook_UI-03-512.png?raw=true" style="height: 31px;height: 31px;">
       </div>  
       
      <div class="clearfix"></div>
