--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
       
       <div class="contact">
-      <div class="content_title">
+      <div class="contact_title">
       <h2>我們的位置不太夠坐</h2><br>
       <h2>要不要先定位呢？</h2>
       </div>
