--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
     <div class="header">
       <h1 class="logo"><a href="#">六角西餐廳</a></h1>
       <ul class="menu">
-        <li><a href="#"></a>特色</li>
-        <li><a href="#"></a>主廚</li>
-        <li><a href="#"></a>地圖</li>
-        <li><a href="#"></a>登入</li>
-        <li><a href="#"></a>註冊</li>
+        <li><a href="#content" >特色</a></li>
+        <li><a href="#impression">主廚</a></li>
+        <li><a href="file:///D:/Front-end/RWD/html/cart.html">餐單</a></li>
+        <li><a href="#contact">地圖</a></li>
+        <li><a href="file:///D:/Front-end/RWD/html/login.html"target="_blank" >登入</a></li>
+        <li><a href="file:///D:/Front-end/RWD/html/register.html"target="_blank">註冊</a></li>
         <div class="clearfix"></div>
       </ul> 
        <a href="#" class="showmenu"><i class="fa fa-bars"></i></a>
