--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <ul class="menu">
         <li><a href="#content" >特色</a></li>
         <li><a href="#impression">主廚</a></li>
-        <li><a href="file:///D:/Front-end/RWD/html/cart.html">餐單</a></li>
+        <li><a href="RWD-Hamberger/cart.html">餐單</a></li>
         <li><a href="#contact">地圖</a></li>
         <li><a href="file:///D:/Front-end/RWD/html/login.html"target="_blank" >登入</a></li>
         <li><a href="file:///D:/Front-end/RWD/html/register.html"target="_blank">註冊</a></li>
