--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
   <meta property="og:image" content=" img\Bitmap.png"/>
   <meta property="og:site_name" content=" 六角西餐廳"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="D:\Front-end\RWD\css\cartall.css">
+  <link rel="stylesheet" href="css/cart2.css">
  
  
   <script src="https://kit.fontawesome.com/d038f356df.js"></script>
@@ -32,7 +32,7 @@
       <ul class="menu">
         <li><a href="#content" >特色</a></li>
         <li><a href="#impression">主廚</a></li>
-        <li><a href="file:///D:/Front-end/RWD/html/cart.html">餐單</a></li>
+        <li><a href="RWD-Hamberger/cart.html">餐單</a></li>
         <li><a href="#contact">地圖</a></li>
         <li><a href="file:///D:/Front-end/RWD/html/login.html"target="_blank" >登入</a></li>
         <li><a href="file:///D:/Front-end/RWD/html/register.html"target="_blank">註冊</a></li>
