--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
   <meta property="og:image" content=" img\Bitmap.png"/>
   <meta property="og:site_name" content=" 六角西餐廳"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/cart2.css">
+  <link rel="stylesheet" href="https://github.com/corly74/RWD-Hamberger/blob/master/css/css.css">
  
  
   <script src="https://kit.fontawesome.com/d038f356df.js"></script>
