--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
  
  
   <script src="https://kit.fontawesome.com/d038f356df.js"></script>
-   <script src="D:\Front-end\RWD\js/jquery-3.1.1.min.js"></script>
-  <script src="https://github.com/corly74/RWD-Hamberger/blob/master/js/jquery-3.1.1.min.js"></script>
+   <script src="js/jquery-3.1.1.min.js"></script>
+  <script src="js/jquery-3.1.1.min.js"></script>
 </head>
 
 <body>
